# rheometeranalyze

./: CMakeLists.txt  README
cMake/: FindALGLIB.cmake
config/: config.pellet_1  config.pellet_10  config.rheom  config.rheom_100k  config.rheom_200k_Uhlig  config.rheom_200k_Uhlig_20-39  config.rheom_500k  config.rheom_FGM_1  config.rheom_Mik_1  gnuplot_draw
src/: CMakeLists.txt  band.cpp  band.h  bandRow.cpp  bandRow.h  bandShearZone.cpp  bandShearZone.h  config.cpp  config.h  export.cpp  export.h  force.cpp  force.h  forceChain.cpp  forceChain.h  forceRow.cpp  forceRow.h  interactionori.cpp  interactionori.h  main.cpp  main.h  math_custom.cpp  math_custom.h  particle.cpp  particle.h  particleRow.cpp  particleRow.h  rheometer.cpp  rheometer.h  snapshot.cpp  snapshot.h  snapshotRow.cpp  snapshotRow.h
